fixed card alignment

--- a/docs/style.css
+++ b/docs/style.css
@@ -20,8 +20,17 @@ body {
     justify-content: center;
 }
 
-
 .card {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 25px;
+    padding-bottom: 10px;
+    border: solid black 2px;
+}
+
+.card1 {
     display: flex;
     background-color: #e5e5e5;
     border-radius: 25px;
@@ -30,53 +39,31 @@ body {
     transition: transform 0.3s;
     z-index: 4;
     position: relative;
+    margin-bottom: 45px;
 }
 
-.card:hover {
-    transform: translateY(-30px) scale(1.03);
+.card1:hover {
+    transform: translateY(-20px) scale(1.03);
     box-shadow: 0px 1px 30px rgba(0, 0, 0, 0.212);
-    border: solid black 2px;
 }
 
 .card2 {
     background-color: #bcbcbc;
-    border-radius: 25px;
-    padding-bottom: 10px;
-    border: solid black 2px;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     z-index: 3;
     transform: translateY(15px);
 }
 
 .card3 {
     background-color: #9f9f9f;
-    border-radius: 25px;
-    padding-bottom: 10px;
-    border: solid black 2px;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     z-index: 2;
     transform: translateY(30px);
 }
 
 .card4 {
     background-color: #828080;
-    margin-bottom: 0;
-    border-radius: 25px;
-    padding-bottom: 10px;
-    border: solid black 2px;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     z-index: 1;
     transform: translateY(45px);
 }
@@ -138,7 +125,7 @@ h2 {
 
 @media only screen and (max-width: 1600px) {
 
-    .card {
+    .card1 {
         text-align: left;
     }
     
@@ -241,7 +228,7 @@ h2 {
 }
 
 @media only screen and (max-width: 1050px) {
-    .card {
+    .card1 {
         flex-direction: column;
         text-align: center;
     }
@@ -284,7 +271,7 @@ h2 {
         font-size: 1rem;
     }
 
-    .card {
+    .card1 {
         margin-top: 0vh;
     }
 
@@ -298,20 +285,20 @@ h2 {
 
     .profpic {
         margin-top: 30px;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
     }
     
     img {
-        min-width: 140px;
+        min-width: 120px;
     }
     
     .title {
-        margin-bottom: 20px;
-        margin-top: 20px;
+        margin-bottom: 15px;
+        margin-top: 10px;
     }
 
     .contacts {
-        margin-bottom: 25px;
+        margin-bottom: 15px;
     }
 
     .cardborder {
